<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="@string/settings_Notification_default"
        android:entries="@array/settings_by_Notification_label"
        android:entryValues="@array/settings_by_Notification_value"
        android:key="@string/settings_Notification_key"
        android:title="@string/settings_Notification_label" />
    <ListPreference
        android:defaultValue="@string/settings_method_default"
        android:entries="@array/settings_by_mothed_label"
        android:entryValues="@array/settings_by_method_value"
        android:key="@string/settings_method_key"
        android:title="@string/settings_method_label" />
    <ListPreference
        android:defaultValue="@string/settings_azan_default"
        android:entries="@array/settings_by_azan_label"
        android:entryValues="@array/settings_by_azan_value"
        android:key="@string/settings_azan_key"
        android:title="@string/settings_moazen_label" />
    <SwitchPreference
        android:key="@string/switch_key"
        android:defaultValue="true"
        android:summaryOff="@string/screenOff"
        android:summaryOn="@string/screenOn"
        android:switchTextOff="@string/screenOff"
        android:switchTextOn="@string/screenOn"
        android:title="@string/screenTitle" />
</PreferenceScreen>