<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="@string/settings_Notification_default"
        app:entries="@array/settings_by_Notification_label"
        app:entryValues="@array/settings_by_Notification_value"
        app:key="@string/settings_Notification_key"
        app:title="@string/repeat_Notification"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="@string/settings_method_default"
        app:entries="@array/settings_by_mothed_label"
        app:entryValues="@array/settings_by_method_value"
        app:key="@string/settings_method_key"
        app:title="@string/settings_method_label"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="@string/settings_azan_default"
        app:entries="@array/settings_by_azan_label"
        app:entryValues="@array/settings_by_azan_value"
        app:key="@string/settings_azan_key"
        app:title="@string/settings_moazen_label"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>