<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/swarFragment"
        android:icon="@drawable/ic_read"
        android:title="@string/readswar" />
    <item
        android:id="@+id/partsFragment"
        android:icon="@drawable/ic_read"
        android:title="@string/read_parts" />
    <item
        android:id="@+id/soundFragment"
        android:icon="@drawable/ic_speaker"
        android:title="@string/listen_swar" />
    <item
        android:id="@+id/azanFragment"
        android:icon="@drawable/ic_baseline_museum_24"
        android:title="@string/elslah" />
    <item
        android:id="@+id/azkarFragment"
        android:icon="@drawable/ic_baseline_access_alarm_24"
        android:title="@string/azkar" />
</menu>