<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/elarbaoonElnawawyFragment"
            android:icon="@drawable/ic_reader_mode"
            android:title="@string/el_arbaoon_elnawawy" />

    </group>
    <group
        android:id="@+id/second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/use_way"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/use_way" />

    </group>
    <group
        android:id="@+id/third"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share"
            android:title="@string/shareApp" />
        <item
            android:id="@+id/action_rate"
            android:icon="@drawable/ic_grade"
            android:title="@string/labelEvaluation" />
        <item
            android:id="@+id/action_send_us"
            android:icon="@drawable/ic_email"
            android:title="@string/labelSend" />
    </group>

    <group
        android:id="@+id/four"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>