<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_bottom"
    app:startDestination="@id/swarFragment">
    <fragment
        android:id="@+id/swarFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.SwarFragment"
        android:label="@string/readswar" >
    </fragment>
    <fragment
        android:id="@+id/partsFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.PartsFragment"
        android:label="@string/read_parts" />
    <fragment
        android:id="@+id/soundFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.SoundFragment"
        android:label="@string/listen_swar" >
        <action
            android:id="@+id/action_soundFragment_to_swipeFragment"
            app:destination="@id/swipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/azanFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.AzanFragment"
        android:label="@string/elslah" />
    <fragment
        android:id="@+id/azkarFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.AzkarFragment"
        android:label="@string/azkar_elmosle" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.mohamedtaha.imagine.ui.preferences.activity.SettingsActivity"
        android:label="SettingsActivity" />
    <activity
        android:id="@+id/splashActivity"
        android:name="com.mohamedtaha.imagine.ui.splash.SplashActivity"
        android:label="SplashActivity" />
    <fragment
        android:id="@+id/swipeFragment"
        android:name="com.mohamedtaha.imagine.ui.home.fragment.ListSoundReaderFragment"
        tools:layout="@layout/fragment_list_sound_reader" >
        <argument
            android:name="shekh_id"
            app:argType="integer" />
        <argument
            android:name="shekh_name"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/elarbaoonElnawawyFragment"
        android:name="com.mohamedtaha.imagine.ui.navigationview.fragment.ElarbaoonElnawawyFragment"
        android:label="@string/el_arbaoon_elnawawy">

        <action
            android:id="@+id/action_elarbaoonElnawawyFragment_to_descriptionElarbaoonFragment"
            app:destination="@id/descriptionElarbaoonFragment"
            app:popUpTo="@id/elarbaoonElnawawyFragment" />

    </fragment>
    <fragment
        android:id="@+id/descriptionElarbaoonFragment"
        android:name="com.mohamedtaha.imagine.ui.navigationview.fragment.DescriptionElarbaoonFragment"
        tools:layout="@layout/fragment_description_elarbaoon">
        <argument
            android:name="elarbaoonElnawawyModel"
            app:argType="com.mohamedtaha.imagine.mvp.model.ElarbaoonElnawawyModel" />
    </fragment>
</navigation>