<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TV_Fagr"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_height="wrap_content"
            android:hint="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/T_Fagr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/elfagr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TV_Dauhr"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_height="wrap_content"
            android:hint="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/T_Dauhr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/eldahr" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TV_Asr"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_height="wrap_content"
            android:hint="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/T_Asr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/elasr" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TV_MAgrib"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_height="wrap_content"
            android:hint="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/T_MAgrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/elmagrab" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens_6xl"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TV_Esha"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dimens_6xl"
            android:layout_height="wrap_content"
            android:hint="@string/hello_blank_fragment" />
        <TextView
            android:id="@+id/T_Esha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/elesha" />
    </LinearLayout>
</LinearLayout>